--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -27,7 +27,7 @@
 		<script src="{{ STATIC_URL }}/js/dropdown.js" type="text/javascript"></script>
     	<script src="{{ STATIC_URL }}/js/site.js" type="text/javascript"></script>
     	<script src="{{ STATIC_URL }}/js/jquery.notify.min.js" type="text/javascript"></script>
-    	<script src="{{ STATIC_URL }}/js/jquery.forms.js" type="text/javascript"></script>
+    	<script src="{{ STATIC_URL }}/js/jquery.form.js" type="text/javascript"></script>
 		
 		{% comment %}
 		  This will load the wysiwyg system for all pages that iherit from base.html
