--- a/src/e_cidadania/apps/debate/templates/debate/debate_add.html
+++ b/src/e_cidadania/apps/debate/templates/debate/debate_add.html
@@ -37,7 +37,7 @@
                             </td>
                             <td id="sortable-debate1" class="connectedSortable">
 	                            <div id="debate1-note1" class="note"><textarea>Can be dropped..</textarea></div>
-                                <div id="debate1-note2" class="note"><textarea>..on an empty list</textarea></div>
+                                <div id="debate1-note2" class="note"><a href="#" id="close"></a><textarea>..on an empty list</textarea></div>
                             </td>
                         </tr>
                     </tbody>
