--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -22,12 +22,9 @@
 			google.load("jquery", "1.6.3", {uncompressed:false});
 			google.load("jqueryui", "1.8.16", {uncompressed:false});
 		</script> 
-		<!-- <script src="{{ STATIC_URL }}/js/jquery.js" type="text/javascript"></script>
-		<script src="{{ STATIC_URL }}/js/jquery-ui.js" type="text/javascript"></script> -->
-		<script src="{{ STATIC_URL }}/js/dropdown.js" type="text/javascript"></script>
     	<script src="{{ STATIC_URL }}/js/site.js" type="text/javascript"></script>
     	<script src="{{ STATIC_URL }}/js/jquery.notify.min.js" type="text/javascript"></script>
-    	<script src="{{ STATIC_URL }}/js/jquery.form.js" type="text/javascript"></script>
+    	<!-- <script src="{{ STATIC_URL }}/js/jquery.form.js" type="text/javascript"></script> -->
 		
 		{% comment %}
 		  This will load the wysiwyg system for all pages that iherit from base.html
