--- a/src/e_cidadania/apps/debate/templates/debate/debate_add.html
+++ b/src/e_cidadania/apps/debate/templates/debate/debate_add.html
@@ -46,12 +46,6 @@
                 <a href="javascript:removeTableRow()" id="del-row-btn" class="btn danger small">{% trans "Remove row" %}</a>         
                 <a href="javascript:addTableRow()" id="new-row-btn" class="btn primary small">{% trans "Add row" %}</a>
 
-                <br />
-                
-                <a href="javascript:createNote()" id="new-note" class="btn primary small">{% trans "Add new note" %}</a>
-                <a href="javascript:createPhase()" id="create-phase" class="btn primary small">{% trans "Add phase"%}</a>
-                <div id="sortable-dispatcher"></div>
-                
                 <hr />
                 <h1>{% trans "Other debate data" %}</h1><br/><br/>
                 
@@ -96,7 +90,7 @@
                 
                 <hr />
 
-                <!-- <input class="btn primary" type="submit" value="{% trans 'Save' %}" /> -->
+                <input class="btn primary small" type="submit" value="{% trans 'Save' %}" />
                 <a href="../../" class="btn danger small">{% trans "Cancel" %}</a>
 
             </form>
