--- a/src/e_cidadania/apps/news/templates/news/post_add.html
+++ b/src/e_cidadania/apps/news/templates/news/post_add.html
@@ -28,41 +28,51 @@
       <form action="" method="post">{% csrf_token %}
 
         {{ form.non_field_errors }}
-        <div class="fieldWrapper">
-          {{ form.post_title.errors }}
-          <label for="id_post_title">{% trans "Title" %}:</label>
-          <p>{{ form.post_title }}</p>
-          <p id="form_help_text">{{ form.post_title.help_text }}</p>
+
+        <div class="clearfix"> 
+            {{ form.post_title.errors }}
+            <label for="prependedInput">{{ form.post_title.label }}</label> 
+            <div class="input"> 
+                {{ form.post_title }}
+                <span class="help-inline">{{ form.post_title.help_text }}</span>
+            </div> 
+        </div>
+        
+        <div class="clearfix"> 
+            {{ form.post_message.errors }}
+            <label for="prependedInput">{{ form.post_message.label }}</label> 
+            <div class="input"> 
+                {{ form.post_message }}
+                {% wysiwyg_editor "id_post_message" %}
+                <span class="help-inline">{{ form.post_message.help_text }}</span>
+            </div> 
+        </div>
+        
+        <div class="clearfix"> 
+            {{ form.post_tags.errors }}
+            <label for="prependedInput">{{ form.post_tags.label }}</label> 
+            <div class="input"> 
+                {{ form.post_tags }}
+                <span class="help-inline">{{ form.post_tags.help_text }}</span>
+            </div> 
         </div>
 
-        <div class="fieldWrapper">
-          {{ form.post_message.errors }}
-          <label for="id_name">{% trans "Text" %}:</label>
-          <p>{{ form.post_message }}</p>
-          {% wysiwyg_editor "id_post_message" %}
-          <p id="form_help_text">{{ form.post_message.help_text }}</p>
+        <div class="clearfix"> 
+            {{ form.pub_index.errors }}
+            <label for="prependedInput">{{ form.pub_index.label }}</label> 
+            <div class="input"> 
+                {{ form.pub_index }}
+                <span class="help-inline">{{ form.pub_index.help_text }}</span>
+            </div> 
         </div>
-
-        <div class="fieldWrapper">
-          {{ form.post_tags.errors }}
-          <label for="id_post_tags">{% trans "Tags" %}:</label>
-          <p>{{ form.post_tags }}</p>
-          <p id="form_help_text">{{ form.post_tags.help_text }}</p>
-        </div>
-
-        <div class="fieldWrapper">
-          {{ form.pub_index.errors }}
-          <label for="id_name">{% trans "Publish in index page" %}:</label>
-          <p>{{ form.pub_index }}</p>
-          <p id="form_help_text">{{ form.pub_index.help_text }}</p>
-        </div>
-
+        
         {{ form.author.as_hidden }}
         {{ form.space.as_hidden }}
 
-        <p><input type="submit" value="{% trans 'Create' %}" /></p>
+        <hr />
 
-        <p><a href="/">&laquo; {% trans "Go back" %}</a></p>
+        <a href="/" class="btn danger small">&laquo; {% trans "Go back" %}</a>
+        <input class="btn small primary " type="submit" value="{% trans 'Publish' %}" />
       </form>
     </div>
 
