--- a/src/e_cidadania/apps/news/templates/news/post_confirm_delete.html
+++ b/src/e_cidadania/apps/news/templates/news/post_confirm_delete.html
@@ -2,27 +2,29 @@
 {% load i18n %}
 
 {% block title %}{% trans "Delete news" %}{% endblock %}
+
 {% block logo %}
-  {% if get_place %}
-    <img src="{{ MEDIA_URL }}/{{ get_place.logo }}">
-  {% endif %}
+    {% if get_place %}
+        <img src="{{ MEDIA_URL }}/{{ get_place.logo }}">
+    {% endif %}
 {% endblock %}
   
 {% block banner %}
-  {% if get_place %}
-    <img src="{{ MEDIA_URL }}/{{ get_place.banner }}">
-  {% endif %}
+    {% if get_place %}
+        <img src="{{ MEDIA_URL }}/{{ get_place.banner }}">
+    {% endif %}
 {% endblock %}
 
 {% block content %}
 
-  {% block centercol %}
-    <div class="grid_16">
-        <form action="" method="post">{% csrf_token %}
-          <p>{% trans "Are you sure you want to delete this post? This action cannot be undone." %}</p>
+    {% block centercol %}
+        <div class="grid_16">
+            <form action="" method="post">{% csrf_token %}
+                <p>{% trans "Are you sure you want to delete this post? This action cannot be undone." %}</p>
 
-          <p><input type="submit" value="{% trans 'Delete' %}" /></p>
-          <p><a href="/">&laquo; {% trans "Go back" %}</a></p>
+                <hr />
+                <a href="/" class="btn small">&laquo; {% trans "Go back" %}</a>
+                <input class="btn small danger" type="submit" value="{% trans 'Delete' %}" />
         </form>
     </div>
 
