--- a/src/e_cidadania/templates/news/post_list.html
+++ b/src/e_cidadania/templates/news/post_list.html
@@ -5,23 +5,23 @@
 
 {% block content %}
 
-  {% block centercol %}
-    <div class="grid_16">
+    {% block centercol %}
+        <div class="grid_16">
     
-      <div id="contenttitles">
-        {% trans "News list" %}
-      </div>
-      {% for post in object_list %}
-        <p><a href="/news/{{ post.id }}/">{{ post.post_title }}</a></p>
-      {% empty %}
-        <p>{% trans "There are no post." %}</p>
-      {% endfor %}
-      <hr />
-      <p>
-        <a href="../" class="pagebutton">{% trans "Go back" %}</a>
-      </p>
-    </div>
-  {% endblock %}
+            <div id="contenttitles">
+                {% trans "News list" %}
+            </div>
+      
+            {% for post in object_list %}
+                <p><a href="/news/{{ post.id }}/">{{ post.post_title }}</a></p>
+            {% empty %}
+                <p>{% trans "There are no post." %}</p>
+            {% endfor %}
+
+            <hr />
+            <a href="../" class="btn danger small">&laquo; {% trans "Go back" %}</a>
+        </div>
+    {% endblock %}
 
 {% endblock %}
 
