--- a/src/e_cidadania/apps/news/templates/news/post_confirm_delete.html
+++ b/src/e_cidadania/apps/news/templates/news/post_confirm_delete.html
@@ -19,6 +19,10 @@
 
     {% block centercol %}
         <div class="grid_16">
+            <div id="contenttitles">
+                {% trans "Delete post" %}
+            </div>
+            
             <form action="" method="post">{% csrf_token %}
                 <p>{% trans "Are you sure you want to delete this post? This action cannot be undone." %}</p>
 
