--- a/src/e_cidadania/apps/proposals/templates/proposals/proposal_confirm_delete.html
+++ b/src/e_cidadania/apps/proposals/templates/proposals/proposal_confirm_delete.html
@@ -15,22 +15,19 @@
         </div>
         
         <form action="" method="post">{% csrf_token %}
-          <p>{% trans "Are you sure you want to delete this proposal? This action cannot be undone." %}</p>
+            <p>{% trans "Are you sure you want to delete this proposal? This action cannot be undone." %}</p>
 
-          <hr />
-          <p class="buttons">
-            <input type="submit" value="{% trans 'Delete' %}" />
-            <a href="../../" class="pagebutton">{% trans "Cancel" %}</a>
-          </p>
+            <hr />
+            <a href="/" class="btn small">&laquo; {% trans "Go back" %}</a>
+            <input class="btn small danger" type="submit" value="{% trans 'Delete' %}" />
         </form>
     </div>
 
-  {% endblock %}
+    {% endblock %}
 
-
-  {% block rightcol %}
-    <div class="grid_5">
-    </div>
-  {% endblock %}
+    {% block rightcol %}
+        <div class="grid_5">
+        </div>
+    {% endblock %}
 
 {% endblock %}
