--- a/src/e_cidadania/apps/proposals/templates/proposals/proposal_list.html
+++ b/src/e_cidadania/apps/proposals/templates/proposals/proposal_list.html
@@ -8,66 +8,64 @@
 
 {% block content %}
 
-  {% block centercol %}
-    <div class="grid_11">
-    {% for p in object_list %}
-      <div id="proposal-wrapper">
-        {% if perms.proposals.add_proposal %}
-        <div id="tools">
-          <a href="../add/"><img src="{{ STATIC_URL }}/assets/icons/add16.png" alt="{% trans 'Add proposal' %}" title="{% trans 'Add proposal' %}"/></a> 
-          {% if perms.proposals.edit_proposal %}
-            <a href="edit/{{ p.id }}"><img src="{{ STATIC_URL }}/assets/icons/edit16.png" alt="{% trans 'Edit' %}" title="{% trans 'Edit' %}"/></a> 
-          {% endif %}
-          {% if perms.proposals.delete_proposal %}
-            <a href="delete/{{ p.id }}"><img src="{{ STATIC_URL }}/assets/icons/delete16.png" alt="{% trans 'Delete' %}" title="{% trans 'Delete' %}"/></a>
-          {% endif %}
+    {% block centercol %}
+        <div class="grid_11">
+            {% for p in object_list %}
+                <div id="proposal-wrapper">
+                    {% if perms.proposals.add_proposal %}
+                        <div id="tools">
+                            <a href="../add/"><img src="{{ STATIC_URL }}/assets/icons/add16.png" alt="{% trans 'Add proposal' %}" title="{% trans 'Add proposal' %}"/></a> 
+                            {% if perms.proposals.edit_proposal %}
+                                <a href="edit/{{ p.id }}"><img src="{{ STATIC_URL }}/assets/icons/edit16.png" alt="{% trans 'Edit' %}" title="{% trans 'Edit' %}"/></a> 
+                            {% endif %}
+                            {% if perms.proposals.delete_proposal %}
+                                <a href="delete/{{ p.id }}"><img src="{{ STATIC_URL }}/assets/icons/delete16.png" alt="{% trans 'Delete' %}" title="{% trans 'Delete' %}"/></a>
+                            {% endif %}
+                        </div>
+                    {% endif %}
+                    <div id="votes">
+                        <span style="font-size:30px;text-align:center;">{{ p.support_votes }}</span><br/>apoyos
+                    </div>
+                    <!-- Here goes the voting button -->
+                    <div id="proposal">
+                        <div class="title"><a href="{{ request.path }}{{ p.id }}/">{{ p.title }}</a></div>
+                        <div class="message">{{ p.message|truncatewords:12 }}</div>
+                        {% get_comment_count for p as comment_count %}
+                        <div class="creator">{% trans "proposed by " %} <a href="/accounts/{{ p.author }}">{{ p.author }}</a> {% trans " at " %} {{ p.pub_date|date:"j/m/Y G:i" }} | <a href="{{ request.path }}view/{{ p.id }}/">{{ comment_count }} {% trans "comments" %}</a></div>
+                    </div>
+                    {% comment %}
+                        The following div is to make the wrapper to wrap everything.
+                    {% endcomment %}
+                    <div style="clear:left;"></div>
+                </div>
+            {% empty %}
+                <p>{% trans "There are no proposals for this space." %}</p>
+            {% endfor %}
         </div>
-        {% endif %}
-        <div id="votes">
-          <span style="font-size:30px;text-align:center;">{{ p.support_votes }}</span><br/>apoyos
-        </div>
-        <!-- Here goes the voting button -->
-        <div id="proposal">
-          <div class="title"><a href="{{ request.path }}{{ p.id }}/">{{ p.title }}</a></div>
-          <div class="message">{{ p.message|truncatewords:12 }}</div>
-          {% get_comment_count for p as comment_count %}
-          <div class="creator">{% trans "proposed by " %} <a href="/accounts/{{ p.author }}">{{ p.author }}</a> {% trans " at " %} {{ p.pub_date|date:"j/m/Y G:i" }} | <a href="{{ request.path }}view/{{ p.id }}/">{{ comment_count }} {% trans "comments" %}</a></div>
-        </div>
-        {% comment %}
-          The following div is to make the wrapper to wrap everything.
-        {% endcomment %}
-        <div style="clear:left;"></div>
-      </div>
-    {% empty %}
-      <p>{% trans "There are no proposals for this space." %}</p>
-    {% endfor %}
-    </div>
     
-  <hr />
-  <p class="buttons">
-    <a href="../../" class="pagebutton">{% trans "Go back" %}</a>
-  </p>
+        <hr />
+        <a href="/" class="btn small">&laquo; {% trans "Go back" %}</a>
   
-    {% if is_paginated %}
-    <div class="pagination">
-      <span class="page-links">
-      {% if page_obj.has_previous %}
-        <a href="/spaces/?page={{ page_obj.previous_page_number }}">previous</a>
-      {% endif %}
-      <span class="page-current">
-        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-      </span>
-      {% if page_obj.has_next %}
-        <a href="/spaces/?page={{ page_obj.next_page_number }}">next</a>
-      {% endif %}
-      </span>
-    </div>
-    {% endif %}
-  {% endblock %}
+        {% if is_paginated %}
+            <div class="pagination">
+                <span class="page-links">
+                    {% if page_obj.has_previous %}
+                        <a href="/spaces/?page={{ page_obj.previous_page_number }}">previous</a>
+                    {% endif %}
+                    <span class="page-current">
+                        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                    </span>
+                    {% if page_obj.has_next %}
+                        <a href="/spaces/?page={{ page_obj.next_page_number }}">next</a>
+                    {% endif %}
+                </span>
+            </div>
+        {% endif %}
+    {% endblock %}
 
-  {% block rightcol %}
-    <div class="grid_5">
-    </div>
-  {% endblock%}
+    {% block rightcol %}
+        <div class="grid_5">
+        </div>
+    {% endblock%}
 
 {% endblock %}
