--- a/src/e_cidadania/apps/spaces/templates/spaces/document_add.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/document_add.html
@@ -7,55 +7,59 @@
 
 {% block content %}
 
-  {% block centercol %}
-    <div class="grid_11">
+    {% block centercol %}
+        <div class="grid_11">
     
-      <div id="contenttitles">
-        {% trans "Upload new document" %}
-      </div>
+            <div id="contenttitles">
+                {% trans "Upload new document" %}
+            </div>
       
-      <form enctype="multipart/form-data" action="" method="post">{% csrf_token %}
+            <form enctype="multipart/form-data" action="" method="post">{% csrf_token %}
       
-        {{ form.non_field_errors }}
-        <div class="fieldWrapper">
-          {{ form.title.errors }}
-          <label for="id_title">{% trans "Title" %}:</label>
-          <p>{{ form.title }}</p>
-          <p id="form_help_text">{{ form.title.help_text }}</p>
-        </div>
+                {{ form.non_field_errors }}
+                
+                <div class="clearfix"> 
+                    {{ form.title.errors }}
+                    <label for="prependedInput">{{ form.title.label }}</label> 
+                    <div class="input"> 
+                        {{ form.title }}
+                        <span class="help-inline">{{ form.title.help_text }}</span>
+                    </div> 
+                </div>
+                
+                <div class="clearfix"> 
+                    {{ form.docfile.errors }}
+                    <label for="prependedInput">{{ form.docfile.label }}</label> 
+                    <div class="input"> 
+                        {{ form.docfile }}
+                        <span class="help-inline">{{ form.docfile.help_text }}</span>
+                    </div> 
+                </div>
         
-        <div class="fieldWrapper">
-          {{ form.docfile.errors }}
-          <label for="id_name">{% trans "Select your file" %}:</label>
-          <p>{{ form.docfile }}</p>
-          <p id="form_help_text">{{ form.docfile.help_text }}</p>
+                {{ form.space.as_hidden }}
+                {{ form.author.as_hidden }}
+                
+                <hr />
+                <a href="../../" class="btn danger small">&laquo; {% trans "Go back" %}</a>
+                <input class="btn small primary " type="submit" value="{% trans 'Upload' %}" />
+
+            </form>
         </div>
-        
-        {{ form.space.as_hidden }}
-        {{ form.author.as_hidden }}
 
-        <hr />
-        <p class="buttons">
-          <input type="submit" value="{% trans 'Upload' %}" />
-          <a href="../../" class="pagebutton">{% trans "Cancel" %}</a>
-        </p>
-      </form>
-    </div>
-
-  {% endblock %}
+    {% endblock %}
 
 
-  {% block rightcol %}
-    <div class="grid_5">
-      <div id="widget">
-        <h2>{% trans "What can I upload?"%}</h2>
-        <ul class="instructions">
-          <li><strong>{% trans "Allowed formats" %}:</strong> {% trans "Mainly all non executable documents (PDF, ODT, DOC). Audio and video are not allowed."%}</li>
-          <li><strong>{% trans "Maximum size" %}:</strong> {% trans "Allowed size is 10MB"%}</li>
-        </ul>
-      </div>
-    </div>
-  {% endblock %}
+    {% block rightcol %}
+        <div class="grid_5">
+            <div id="widget">
+                <h2>{% trans "What can I upload?"%}</h2>
+                <ul class="instructions">
+                    <li><strong>{% trans "Allowed formats" %}:</strong> {% trans "Mainly all non executable documents (PDF, ODT, DOC). Audio and video are not allowed."%}</li>
+                    <li><strong>{% trans "Maximum size" %}:</strong> {% trans "Allowed size is 10MB"%}</li>
+                </ul>
+            </div>
+        </div>
+    {% endblock %}
 
 {% endblock %}
 
