--- a/src/e_cidadania/apps/spaces/templates/spaces/document_confirm_delete.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/document_confirm_delete.html
@@ -7,29 +7,27 @@
 
 {% block content %}
 
-  {% block centercol %}
-    <div class="grid_16">
+    {% block centercol %}
+        <div class="grid_16">
     
-      <div id="contenttitles">
-        {% trans "Delete document" %}
-      </div>
+            <div id="contenttitles">
+                {% trans "Delete document" %}
+            </div>
       
-        <form action="" method="post">{% csrf_token %}
-          <p>{% trans "Are you sure you want to delete this document? This action cannot be undone." %}</p><br/>
+            <form action="" method="post">{% csrf_token %}
+                <p>{% trans "Are you sure you want to delete this document? This action cannot be undone." %}</p><br/>
 
-          <hr />
-          <p class="buttons">
-            <input type="submit" value="{% trans 'Delete' %}" />
-            <a href="../../" class="pagebutton">{% trans "Cancel" %}</a>
-          </p>
+                <hr />
+                <a href="/" class="btn small">&laquo; {% trans "Go back" %}</a>
+                <input class="btn small danger" type="submit" value="{% trans 'Delete' %}" />
 
-        </form>
-    </div>
+            </form>
+        </div>
 
-  {% endblock %}
+    {% endblock %}
 
 
-  {% block rightcol %}
-  {% endblock %}
+    {% block rightcol %}
+    {% endblock %}
 
 {% endblock %}
