--- a/src/e_cidadania/apps/spaces/templates/spaces/meeting_add.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/meeting_add.html
@@ -9,89 +9,98 @@
 
 {% block content %}
 
-  {% block centercol %}
-    <div class="grid_11">
+    {% block centercol %}
+        <div class="grid_11">
     
-      <div id="contenttitles">
-        {% trans "Create new meeting" %}
-      </div>
+            <div id="contenttitles">
+                {% trans "Create new meeting" %}
+            </div>
       
-      <form enctype="" action="" method="post">{% csrf_token %}
+            <form enctype="" action="" method="post">{% csrf_token %}
         
-        {{ form.non_field_errors }}
-        <div class="fieldWrapper">
-          {{ form.title.errors }}
-          <label for="id_title">{% trans "Title" %}:</label>
-          <p>{{ form.title }}</p>
-          <p id="form_help_text">{{ form.title.help_text }}</p>
+                {{ form.non_field_errors }}
+                
+                <div class="clearfix"> 
+                    {{ form.title.errors }}
+                    <label for="prependedInput">{{ form.title.label }}</label> 
+                    <div class="input"> 
+                        {{ form.title }}
+                        <span class="help-inline">{{ form.title.help_text }}</span>
+                    </div> 
+                </div>
+                
+                <div class="clearfix"> 
+                    {{ form.description.errors }}
+                    <label for="prependedInput">{{ form.description.label }}</label> 
+                    <div class="input"> 
+                        {{ form.description }}
+                        {% wysiwyg_editor "id_description" %}
+                        <span class="help-inline">{{ form.description.help_text }}</span>
+                    </div> 
+                </div>
+                
+                <div class="clearfix"> 
+                    {{ form.location.errors }}
+                    <label for="prependedInput">{{ form.location.label }}</label> 
+                    <div class="input"> 
+                        {{ form.location }}
+                        <span class="help-inline">{{ form.location.help_text }}</span>
+                    </div> 
+                </div>
+                
+                <div class="clearfix"> 
+                    {{ form.meeting_type.errors }}
+                    <label for="prependedInput">{{ form.meeting_type.label }}</label> 
+                    <div class="input"> 
+                        {{ form.meeting_type }}
+                        <span class="help-inline">{{ form.meeting_type.help_text }}</span>
+                    </div> 
+                </div>
+                
+                <div class="clearfix"> 
+                    {{ form.meeting_date.errors }}
+                    <label for="prependedInput">{{ form.meeting_date.label }}</label> 
+                    <div class="input">
+                        <input type="text" name="meeting_date" id="datepicker">
+                        <span class="help-inline">{{ form.meeting_date.help_text }}</span>
+                    </div> 
+                </div>
+                
+                <div class="clearfix"> 
+                    {{ form.user.errors }}
+                    <label for="prependedInput">{{ form.user.label }}</label> 
+                    <div class="input">
+                        {{ form.user }}
+                        <span class="help-inline">{{ form.user.help_text }}</span>
+                    </div> 
+                </div>
+                
+                {{ form.space.as_hidden }}
+                {{ form.meeting_author.as_hidden }}
+
+                <hr />
+                <a href="../../" class="btn danger small">&laquo; {% trans "Cancel" %}</a>
+                <input class="btn small primary " type="submit" value="{% trans 'Create' %}" />
+
+            </form>
         </div>
 
-        <div class="fieldWrapper">
-          {{ form.description.errors }}
-          <label for="id_title">{% trans "Description" %}:</label>
-          <p>{{ form.description }}</p>
-          {% wysiwyg_editor "id_description" %}
-          <p id="form_help_text">{{ form.description.help_text }}</p>
+    {% endblock %}
+
+    {% block rightcol %}
+        <div class="grid_5">
+            <div id="widget">
+                <h2>{% trans "How do meetings work?"%}</h2>
+                <ul class="instructions">
+                    <li><strong>{% trans "Title" %}:</strong> {% trans "A descriptive title of the meeting. Be concise."%}</li>
+                    <li><strong>{% trans "Description" %}:</strong> {% trans "A short resume of the points treated in the meeting." %}</li>
+                    <li><strong>{% trans "Location" %}:</strong> {% trans "Where does the meeting took place." %}</li>
+                    <li><strong>{% trans "Meeting type" %}:</strong> {% trans "Type of meeting."%}</li>
+                    <li><strong>{% trans "Meeting date" %}:</strong> {% trans "Date when the meeting took place."%}</li>
+                </ul>
+            </div>
         </div>
-
-        <div class="fieldWrapper">
-          {{ form.location.errors }}
-          <label for="id_title">{% trans "Location" %}:</label>
-          <p>{{ form.location }}</p>
-          <p id="form_help_text">{{ form.location.help_text }}</p>
-        </div>
-
-        <div class="fieldWrapper">
-          {{ form.meeting_type.errors }}
-          <label for="id_meeting_type">{% trans "Meeting type" %}:</label>
-          <p>{{ form.meeting_type }}</p>
-          <p id="form_help_text">{{ form.meeting_type.help_text }}</p>
-        </div>
-
-        <div class="fieldWrapper">
-          {{ form.meeting_date.errors }}
-          <label for="id_meeting_date">{% trans "Meeting date" %}:</label>
-          <p><input type="text" name="meeting_date" id="datepicker"></p>
-          <!--<p>{{ form.meeting_date }}</p>-->
-          <p id="form_help_text">{{ form.meeting_date.help_text }}</p>
-        </div>
-
-        <div class="fieldWrapper">
-          {{ form.user.errors }}
-          <label for="id_user">{% trans "Attendants" %}:</label>
-          <p>{{ form.user }}</p>
-          <p id="form_help_text">{{ form.user.help_text }}</p>
-        </div>
-
-        {{ form.space.as_hidden }}
-        {{ form.meeting_author.as_hidden }}
-
-        <hr />
-        <p class="buttons">
-          <input type="submit" value="{% trans 'Create' %}" />
-          <a href="../../" class="pagebutton">{% trans "Cancel" %}</a>
-        </p>
-
-      </form>
-    </div>
-
-  {% endblock %}
-
-
-  {% block rightcol %}
-    <div class="grid_5">
-      <div id="widget">
-        <h2>{% trans "How do meetings work?"%}</h2>
-        <ul class="instructions">
-          <li><strong>{% trans "Title" %}:</strong> {% trans "A descriptive title of the meeting. Be concise."%}</li>
-          <li><strong>{% trans "Description" %}:</strong> {% trans "A short resume of the points treated in the meeting." %}</li>
-          <li><strong>{% trans "Location" %}:</strong> {% trans "Where does the meeting took place." %}</li>
-          <li><strong>{% trans "Meeting type" %}:</strong> {% trans "Type of meeting."%}</li>
-          <li><strong>{% trans "Meeting date" %}:</strong> {% trans "Date when the meeting took place."%}</li>
-        </ul>
-      </div>
-    </div>
-  {% endblock %}
+    {% endblock %}
 
 {% endblock %}
 
