--- a/src/e_cidadania/apps/spaces/templates/spaces/meeting_confirm_delete.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/meeting_confirm_delete.html
@@ -7,31 +7,29 @@
 
 {% block content %}
 
-  {% block centercol %}
-    <div class="grid_11">
+    {% block centercol %}
+        <div class="grid_11">
     
-      <div id="contenttitles">
-        {% trans "Delete meeting" %}
-      </div>
+            <div id="contenttitles">
+                {% trans "Delete meeting" %}
+            </div>
       
-        <form action="" method="post">{% csrf_token %}
-          <p>{% trans "Are you sure you want to delete this meeting? This action cannot be undone." %}</p>
+            <form action="" method="post">{% csrf_token %}
+                <p>{% trans "Are you sure you want to delete this meeting? This action cannot be undone." %}</p>
 
-          <hr />
-          <p class="buttons">
-            <input type="submit" value="{% trans 'Delete' %}" />
-            <a href="../../" class="pagebutton">{% trans "Cancel" %}</a>
-          </p>
+                <hr />
+                <a href="../../" class="btn small">&laquo; {% trans "Go back" %}</a>
+                <input class="btn small danger" type="submit" value="{% trans 'Delete' %}" />
           
-        </form>
-    </div>
+            </form>
+        </div>
 
-  {% endblock %}
+    {% endblock %}
 
 
-  {% block rightcol %}
-    <div class="grid_5">
-    </div>
-  {% endblock %}
+    {% block rightcol %}
+        <div class="grid_5">
+        </div>
+    {% endblock %}
 
 {% endblock %}
